Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2758

LBUG in mdt_obj() when accessing objects by FID

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6691

      # echo KITTENS > file
      # lfs getstripe file
      file
      lmm_stripe_count:   1
      lmm_stripe_size:    1048576
      lmm_layout_gen:     0
      lmm_stripe_offset:  1
                          obdidx               objid           objid           group
                               1                            2            0x2      0x240000401
      # lfs fid2path /mnt/lustre '[0x240000401:0x2:0x0]'
      ioctl err -5: Input/output error (5)
      fid2path error: Input/output error
      # stat '.lustre/fid/[0x240000401:0x2:0x0]'
      
      Message from syslogd@m at Feb  5 17:13:30 ...
       kernel:LustreError: 4289:0:(mdt_handler.c:2243:mdt_obj()) ASSERTION( lu_device_is_mdt(o-\
      >lo_dev) ) failed:
      
      Message from syslogd@m at Feb  5 17:13:30 ...
       kernel:LustreError: 4289:0:(mdt_handler.c:2243:mdt_obj()) LBUG
      
      Message from syslogd@m at Feb  5 17:13:30 ...
       kernel:Kernel panic - not syncing: LBUG
      

            di.wang Di Wang (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: