LU-2758 fid: don't LBUG on non MD objects in mdt_object_find()

Return -ENOENT from mdt_object_find() if given a FID for a non MD
object.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I3b14c28f283e55041f56c3150095b205c49f7620